--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,108 @@
   <meta charset="UTF-8" />
   <title>Create Account</title>
   <link rel="stylesheet" href="user-create-acc.css" />
+  <style>
+    /* Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Body */
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #a8edea, #fed6e3);
+}
+
+/* Container */
+.wrap {
+  background: white;
+  padding: 40px 50px;
+  border-radius: 15px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 350px;
+  transition: transform 0.3s ease;
+}
+
+.wrap:hover {
+  transform: translateY(-5px);
+}
+
+/* Heading */
+h2 {
+  margin-bottom: 20px;
+  color: #333;
+  font-size: 26px;
+  letter-spacing: 1px;
+}
+
+/* Input fields */
+input {
+  width: 100%;
+  padding: 12px 14px;
+  margin: 10px 0;
+  border: 2px solid #ddd;
+  border-radius: 8px;
+  outline: none;
+  font-size: 15px;
+  transition: border-color 0.3s;
+}
+
+input:focus {
+  border-color: #4caf50;
+}
+
+/* Button */
+button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 15px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+button:hover {
+  background-color: #43a047;
+  transform: scale(1.03);
+}
+
+/* Login link */
+p {
+  margin-top: 15px;
+  color: #555;
+  font-size: 14px;
+}
+
+p a {
+  color: #4caf50;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+p a:hover {
+  text-decoration: underline;
+}
+
+/* Message */
+.msg {
+  margin-top: 10px;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+  </style>
 </head>
 
 <body>
