--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
       <input type="password" id="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="user-create-acc.html">Create Account</a></p>
+    <p>Don't have an account? <a href="signup.html">Create Account</a></p>
     <p id="msg" class="msg"></p>
   </div>
 
