--- a/signup.html
+++ b/signup.html
@@ -138,7 +138,7 @@
     <h2>Create Account</h2>
     <form id="signupForm"> <input type="email" id="email" placeholder="Email" required /> <input type="password"
         id="password" placeholder="Password (min 6 chars)" required /> <button type="submit">Sign Up</button> </form>
-    <p>Already have an account? <a href="./css/user-create-acc.css">Login</a></p>
+    <p>Already have an account? <a href="login.html">Login</a></p>
     <p id="msg" class="msg"></p>
   </div> <!-- Page logic -->
   <!-- Page logic -->
@@ -183,6 +183,8 @@
 
       try {
         await createUserWithEmailAndPassword(auth, email, password);
+        localStorage.setItem("user", email);
+
 
         msg.textContent = "Account created ✅ Redirecting…";
         msg.style.color = "green";
