--- a/shop.html
+++ b/shop.html
@@ -144,22 +144,52 @@
     .profile i {
       font-size: 20px;
     }
-    .btn-logout {
-  margin-left: 10px;
-  padding: 6px 12px;
-  border: 2px solid crimson;
-  background: transparent;
-  color: crimson;
-  border-radius: 5px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: 0.3s;
-}
 
-.btn-logout:hover {
-  background: crimson;
-  color: white;
-}
+    .btn-logout {
+      margin-left: 10px;
+      padding: 6px 12px;
+      border: 2px solid crimson;
+      background: transparent;
+      color: crimson;
+      border-radius: 5px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .btn-logout:hover {
+      background: crimson;
+      color: white;
+    }
+
+    /* Hide username on mobile */
+    @media (max-width: 768px) {
+      .profile .username {
+        display: none;
+        position: absolute;
+        top: -30px;
+        /* adjust to hover position */
+        left: 50%;
+        transform: translateX(-50%);
+        background: green;
+        color: white;
+        padding: 5px 10px;
+        border-radius: 5px;
+        white-space: nowrap;
+        font-size: 14px;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.3s ease;
+        z-index: 2000;
+      }
+
+      /* Show username on hover */
+      .profile:hover .username {
+        display: block;
+        opacity: 1;
+      }
+    }
+
 
 
 
@@ -628,11 +658,12 @@
       <a href="signup.html" class="btn-signup">Sign Up</a>
 
       <!-- Profile (hidden initially) -->
-      <div class="profile" style="display: none;">
-  <i class="fa-solid fa-user"></i>
-  <span class="username"></span>
-  <button class="btn-logout">Logout</button>
-</div>
+      <div class="profile" style="display: none; position: relative;">
+        <i class="fa-solid fa-user"></i>
+        <span class="username"></span>
+        <button class="btn-logout">Logout</button>
+      </div>
+
 
 
       <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
@@ -742,8 +773,7 @@
   </footer>
 
   <script type="module">
-    //header
-
+    // Header navigation
     const hamburger = document.querySelector(".hamburger");
     const nav = document.querySelector("header nav");
     const closeMenu = document.querySelector(".close-menu");
@@ -756,44 +786,38 @@
       nav.classList.remove("active");
     });
 
-    // ✅ Check login status on page load
+    // Login check and profile setup
     document.addEventListener("DOMContentLoaded", () => {
-      const user = localStorage.getItem("user"); // Example: "Kesavaram"
+      const user = localStorage.getItem("user");
       const loginBtn = document.querySelector(".btn-login");
       const signupBtn = document.querySelector(".btn-signup");
       const profile = document.querySelector(".profile");
       const username = document.querySelector(".username");
 
       if (user) {
-        // Hide login/signup, show profile
         loginBtn.style.display = "none";
         signupBtn.style.display = "none";
         profile.style.display = "flex";
         username.textContent = user;
       } else {
-        // Show login/signup, hide profile
         loginBtn.style.display = "inline-block";
         signupBtn.style.display = "inline-block";
         profile.style.display = "none";
       }
 
-      // Optional: Logout on profile click
       const logoutBtn = document.querySelector(".btn-logout");
-
-logoutBtn.addEventListener("click", () => {
-  if (confirm("Do you want to log out?")) {
-    localStorage.removeItem("user");
-    location.reload();
-  }
-});
-
+      logoutBtn.addEventListener("click", () => {
+        if (confirm("Do you want to log out?")) {
+          localStorage.removeItem("user");
+          location.reload();
+        }
+      });
     });
-
 
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import { getFirestore, collection, getDocs, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-    // Firebase config – replace with your own
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyCbfdG2XU302FuZx0MapVTRmb3Qtaa-hA8",
       authDomain: "ermunai-e-commerce-project.firebaseapp.com",
@@ -802,6 +826,7 @@ logoutBtn.addEventListener("click", () => {
       messagingSenderId: "365240050790",
       appId: "1:365240050790:web:2d4867d6ab4f93a661f9a7"
     };
+
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
@@ -836,32 +861,29 @@ logoutBtn.addEventListener("click", () => {
     function render(list) {
       productGrid.innerHTML = "";
       list.forEach(p => {
-        // using data-id so we know which product clicked
         productGrid.innerHTML += `
-          <div class="product-card" data-id="${p.id}" data-category="${p.category}" >
-            <img src="${p.image}" alt="${p.name}">
-            <div class="card-body">
-              <span class="badge">${p.badge || p.category || ""}</span>
-              <h3>${p.name}</h3>
-              <p class="description">${p.description || ""}</p>
-              <div class="price">₹${p.price}</div>
-              <div class="qty-box">
-                <button onclick="decQty('${p.id}')">−</button>
-                <span id="qty-${p.id}">1</span>
-                <button onclick="incQty('${p.id}')">+</button>
-              </div>
-              <div class="btn-group">
-                <button class="wishlist" onclick="addToCart('${p.id}')">Add to Cart</button>
-                <button class="buy" onclick="buyNow('${p.id}')">Buy Now</button>
-              </div>
+        <div class="product-card" data-id="${p.id}" data-category="${p.category}">
+          <img src="${p.image}" alt="${p.name}">
+          <div class="card-body">
+            <span class="badge">${p.badge || p.category || ""}</span>
+            <h3>${p.name}</h3>
+            <p class="description">${p.description || ""}</p>
+            <div class="price">₹${p.price}</div>
+            <div class="qty-box">
+              <button onclick="decQty('${p.id}')">−</button>
+              <span id="qty-${p.id}">1</span>
+              <button onclick="incQty('${p.id}')">+</button>
             </div>
-          </div>`;
+            <div class="btn-group">
+              <button class="wishlist" onclick="handleAddToCart('${p.id}')">Add to Cart</button>
+              <button class="buy" onclick="handleBuyNow('${p.id}')">Buy Now</button>
+            </div>
+          </div>
+        </div>`;
       });
 
-      // after render, attach click listeners on product-card to open modal (except on the buttons)
       document.querySelectorAll(".product-card").forEach(card => {
         card.addEventListener("click", (e) => {
-          // avoid opening modal if clicked on card’s button itself
           const btn = e.target.closest("button");
           if (btn) return;
           const pid = card.getAttribute("data-id");
@@ -889,7 +911,13 @@ logoutBtn.addEventListener("click", () => {
       if (v > 1) el.textContent = v - 1;
     };
 
-    window.addToCart = id => {
+    // ✅ Restricted Add to Cart
+    window.handleAddToCart = id => {
+      const user = localStorage.getItem("user");
+      if (!user) {
+        alertLoginPrompt();
+        return;
+      }
       const product = products.find(p => p.id === id);
       if (!product) return;
       const qtyEl = document.getElementById(`qty-${id}`);
@@ -898,19 +926,29 @@ logoutBtn.addEventListener("click", () => {
       alert(`${product.name} (x${qty}) added to cart`);
     };
 
-    window.buyNow = id => {
+    // ✅ Restricted Buy Now
+    window.handleBuyNow = id => {
+      const user = localStorage.getItem("user");
+      if (!user) {
+        alertLoginPrompt();
+        return;
+      }
       const product = products.find(p => p.id === id);
       if (!product) return;
       const qtyEl = document.getElementById(`qty-${id}`);
       const qty = qtyEl ? parseInt(qtyEl.textContent) : 1;
-      // Option: clear cart and use only this product?
       localStorage.setItem("cart", JSON.stringify([{ ...product, qty }]));
       window.location.href = "checkout.html";
     };
 
+    function alertLoginPrompt() {
+      const confirmLogin = confirm("Please login/signup before purchasing this product. Click OK to go to login page.");
+      if (confirmLogin) {
+        window.location.href = "login.html";
+      }
+    }
 
     async function openModal(pid) {
-      // get detail product
       let product = products.find(p => p.id === pid);
       if (!product) {
         const docRef = doc(db, "products", pid);
@@ -925,17 +963,13 @@ logoutBtn.addEventListener("click", () => {
       currentModalProduct = product;
       currentModalQty = 1;
 
-      // populate modal
       modalImg.src = product.image || "";
       modalName.textContent = product.name || "";
       modalCategory.textContent = "Category: " + (product.category || "");
-      // assume product.stock field holds stock count
       modalStock.textContent = "Stock: " + (product.stock != null ? product.stock : "N/A");
       modalPrice.textContent = "₹" + product.price;
       modalDesc.textContent = product.description || "";
       modalQtyValue.textContent = currentModalQty;
-
-      // show modal
       modalOverlay.style.display = "flex";
     }
 
@@ -943,11 +977,8 @@ logoutBtn.addEventListener("click", () => {
       modalOverlay.style.display = "none";
     });
 
-    // maybe close if clicked outside content
     modalOverlay.addEventListener("click", (e) => {
-      if (e.target === modalOverlay) {
-        modalOverlay.style.display = "none";
-      }
+      if (e.target === modalOverlay) modalOverlay.style.display = "none";
     });
 
     modalIncQty.addEventListener("click", () => {
@@ -965,6 +996,11 @@ logoutBtn.addEventListener("click", () => {
     });
 
     modalAddToCart.addEventListener("click", () => {
+      const user = localStorage.getItem("user");
+      if (!user) {
+        alertLoginPrompt();
+        return;
+      }
       if (!currentModalProduct) return;
       addToCartWithQty(currentModalProduct, currentModalQty);
       alert(`${currentModalProduct.name} (x${currentModalQty}) added to cart`);
@@ -972,16 +1008,18 @@ logoutBtn.addEventListener("click", () => {
     });
 
     modalBuyNow.addEventListener("click", () => {
+      const user = localStorage.getItem("user");
+      if (!user) {
+        alertLoginPrompt();
+        return;
+      }
       if (!currentModalProduct) return;
-      // store as cart (same as product card buy now)
       localStorage.setItem("cart", JSON.stringify([{ ...currentModalProduct, qty: currentModalQty }]));
       window.location.href = "checkout.html";
     });
 
-
     function addToCartWithQty(product, qty) {
       let cart = JSON.parse(localStorage.getItem("cart") || "[]");
-      // Optionally check if product already in cart, then increase qty
       const existing = cart.find(item => item.id === product.id);
       if (existing) {
         existing.qty = (existing.qty || 1) + qty;
@@ -991,13 +1029,11 @@ logoutBtn.addEventListener("click", () => {
       localStorage.setItem("cart", JSON.stringify(cart));
     }
 
-    // filter from URL param if any
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
     }
 
-    // Initialize
     window.addEventListener("DOMContentLoaded", () => {
       const cat = getQueryParam("category");
       if (cat) {
@@ -1006,8 +1042,8 @@ logoutBtn.addEventListener("click", () => {
       }
       loadProducts();
     });
-
   </script>
+
 </body>
 
 </html>
