--- a/index.html
+++ b/index.html
@@ -677,6 +677,7 @@
         <li><a href="shop.html">Shop</a></li>
         <li><a href="purchase.html">Purchases</a></li>
         <li><a href="about.html">About Us</a></li>
+        <li><a href="feedback.html">Certification & Feedback</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -807,32 +808,101 @@
 
     <div class="faq-item">
       <div class="faq-question">
-        <span>1. Are your products 100% organic?</span>
+        <span>1. What is Ermunai Organic Farm Foods?</span>
         <i class="fa fa-plus"></i>
       </div>
       <div class="faq-answer">
-        Yes, all our products are made from organically grown ingredients, free from harmful chemicals and pesticides.
+        Ermunai Organic Farm Foods is a Chennai-based brand offering organic millet mixes, health powders, and ready-to-cook traditional foods without preservatives.
       </div>
     </div>
 
     <div class="faq-item">
       <div class="faq-question">
-        <span>2. Do you deliver across India?</span>
+        <span>2. Are Ermunai Organic products organic and natural?</span>
         <i class="fa fa-plus"></i>
       </div>
       <div class="faq-answer">
-        Absolutely! We provide safe and timely delivery of our organic products all over India.
+        Yes. All our food mixes are 100% natural, made from native grains, with no artificial flavors, colors, or preservatives.
       </div>
     </div>
 
     <div class="faq-item">
       <div class="faq-question">
-        <span>3. How can I place a bulk order?</span>
+        <span>3. What products do you offer?</span>
         <i class="fa fa-plus"></i>
       </div>
       <div class="faq-answer">
-        For bulk orders, you can contact us directly via phone or email. We also provide special pricing for wholesale
-        customers.
+        We provide organic millet mixes, instant dosa/idli mixes, upma mix, pongal mix, health powders, and podis made from traditional recipes.
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">
+        <span>4. Are your millet mixes good for health?</span>
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="faq-answer">
+        Yes. Millets are rich in fiber, protein, and minerals. They support digestion, manage weight, and are diabetic-friendly.
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">
+        <span>5. Are your products gluten-free?</span>
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="faq-answer">
+        Most millet-based mixes are naturally gluten-free. Please check each product’s ingredient list for details.
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">
+        <span>6. How do I cook your instant mixes?</span>
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="faq-answer">
+        Just add hot water or cook with simple ingredients as per pack instructions. Ready in minutes – perfect for breakfast, dinner, or travel.
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">
+        <span>7. Are your products suitable for children and elders?</span>
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="faq-answer">
+        Yes. Our mixes are safe, healthy, and made with gentle native ingredients, ideal for all age groups.
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">
+        <span>8. Do you deliver across India?</span>
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="faq-answer">
+        Yes. We ship to all major cities and towns in India within 3–7 working days. International delivery is also available on request.
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">
+        <span>9. How can I order your products?</span>
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="faq-answer">
+        You can order directly from our website or contact us at +91 9840752833 for bulk and retail orders.
+      </div>
+    </div>
+
+    <div class="faq-item">
+      <div class="faq-question">
+        <span>10. Is your packaging eco-friendly?</span>
+        <i class="fa fa-plus"></i>
+      </div>
+      <div class="faq-answer">
+        Yes. We use eco-conscious and sustainable packaging to reduce plastic and support a greener lifestyle.
       </div>
     </div>
   </section>
@@ -855,6 +925,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
