--- a/about.html
+++ b/about.html
@@ -588,7 +588,8 @@
 </head>
 
 <body>
-  <header>
+  <!-- header -->
+ <header>
     <div class="logo">
       <img src="./images/logo.jpg" alt="Logo">
       <span>Ermunai Organic Farm Foods</span>
@@ -598,10 +599,11 @@
     <nav>
       <div class="close-menu"><i class="fa-solid fa-times"></i></div>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="purchase.html">Purchases</a></li>
-        <li><a href="about.html" class="active">About Us</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="feedback.html">Certification & Feedback</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -622,12 +624,6 @@
         <button class="btn-logout">Logout</button>
       </div>
 
-
-
-      <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
-    </div>
-
-  </header>
 
   <!-- About Heading -->
   <section class="about-heading">
@@ -727,6 +723,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
