--- a/contact.html
+++ b/contact.html
@@ -523,11 +523,12 @@
     <nav>
       <div class="close-menu"><i class="fa-solid fa-times"></i></div>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="purchase.html">Purchases</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="feedback.html">Certification & Feedback</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -547,12 +548,6 @@
         <button class="btn-logout">Logout</button>
       </div>
 
-
-
-      <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
-    </div>
-
-  </header>
 
   <!-- Hero Section -->
   <section class="hero">
@@ -632,6 +627,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
