--- a/purchase.html
+++ b/purchase.html
@@ -453,10 +453,11 @@
     <nav>
       <div class="close-menu"><i class="fa-solid fa-times"></i></div>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="shop.html">Shop</a></li>
-        <li><a href="purchase.html" class="active">Purchases</a></li>
+        <li><a href="purchase.html">Purchases</a></li>
         <li><a href="about.html">About Us</a></li>
+        <li><a href="feedback.html">Certification & Feedback</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -477,12 +478,6 @@
         <button class="btn-logout">Logout</button>
       </div>
 
-
-
-      <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
-    </div>
-
-  </header>
 
   <div class="container">
     <h1>My Recent Purchases</h1>
@@ -509,6 +504,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
