--- a/shop.html
+++ b/shop.html
@@ -644,6 +644,7 @@
         <li><a href="shop.html" class="active">Shop</a></li>
         <li><a href="purchase.html">Purchases</a></li>
         <li><a href="about.html">About Us</a></li>
+        <li><a href="feedback.html">Certification & Feedback</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -733,6 +734,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="about.html">About Us</a></li>
+          <li><a href="feedback.html">Certification & Feedback</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
